Fixed technologies list to be alligned and not cut off text on smaller screens

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -12,6 +12,10 @@
     margin-top: 15rem;
 }
 
+.technologies, .technologies-container {
+    margin-left: 1rem;
+}
+
 .technologies-container {
     display: flex;
 }
@@ -25,13 +29,10 @@
 
 .techList li {
     text-align: start;
-    margin-left:1rem;
 }
 
 .techList li::before {
     content: "✅";
-    margin-left:2rem;
-    
 }
 
 
@@ -51,7 +52,8 @@
     width: 90%;
     height: 90%;
     object-fit: cover; 
-    object-position: center; 
+    object-position: center;
+    margin-top: 10rem;
 }
 
 
@@ -157,12 +159,6 @@
     .container {
     max-width: 475px;
     }
-    .techList li {
-        text-align: start;
-        list-style-type: '\1F44D';
-        margin-left:1rem;
-        text-align: center;
-    }
     .about-img {
         width: 25rem; 
         height: 35rem; 
@@ -171,20 +167,43 @@
         margin-top: 6rem;
         margin-left: 3rem;
     }
+    .technologies-container {
+        width: 90%;
+        gap:4rem;
+    }
+    .technologies-container li {
+        text-align: left;
+    }
     }
     
     /* xs */
     @media (max-width: 475px) {
     .container {
     width: 100%;
+    }
+
+    .about-hr {
+        width:80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
     .technologies {
-        margin-left: 1rem;
+        margin-left: -5srem;
+        text-align: center;
     }
     
     .technologies-container {
        margin-left: 1rem;
+       flex-direction: column;
+       gap:2rem;
     }
+    .technologies-container li::before {
+            margin-left: 5rem;
     }
+    .techList {
+        width: 100%;
+    }
+
     .about-message {
         width:90%;
         margin: 0 auto;
